2003-01-20  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* evalext.c, evalext.h (scm_self_evaluating_p): New function.

2003-01-10  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.c (scm_timed_wait_condition_variable): Support timed
	waiting also for simple condition variables.

	* goops.c (TEST_CHANGE_CLASS): Use scm_change_object_class instead
	of calling the procedure change-object-class.

2003-01-09  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* ramap.c (scm_ramapc): Typo in error message.

2003-01-08  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* goops.c (scm_sys_prep_layout_x): Bugfix: Only create layout for
	slots with instance allocation.
	
	* goops.c, goops.h (scm_class_extended_generic_with_setter): New
	class.
	(scm_compute_applicable_methods): Use scm_generic_function_methods.

	* goops.c (scm_generic_function_methods): Support extended
	generic functions.

2002-12-29  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* eval.c (unmemocopy): Bugfix: scm_sym_delay --> scm_sym_future.
	Thanks to Neil for pointing this out!

2002-12-29  Neil Jerram  <neil@ossau.uklinux.net>

	* lang.h: Remove declarations matching definitions removed from
	lang.c (just below).

2002-12-28  Neil Jerram  <neil@ossau.uklinux.net>

	* lang.c (scm_nil_cons, scm_nil_car, scm_nil_cdr, scm_null,
	scm_m_while, scm_nil_eq): Remove definitions that were superfluous
	and already commented out.

	* read.h (scm_lreadparen), read.c (scm_lreadr, scm_read_token,
	scm_lreadparen): Support reading vectors with Elisp syntax if
	SCM_ELISP_READ_EXTENSIONS is defined.  (SCM_ELISP_READ_EXTENSIONS
	is not currently defined, and there isn't even a configure switch
	to enable it yet.)

2002-12-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (c-tokenize.o): Refer to source via $< so that vpath
	builds work.
	(EXTRA_DIST): Added version.h.in.
	
2002-12-21  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	This change makes it possible for one thread to do lazy sweeping